noticias en el array realizadas
array json en app componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-listado-noticias></app-listado-noticias>
-<app-formulario></app-formulario>
+<div>
+  <app-listado-noticias></app-listado-noticias>
+</div>
+<div>
+  <app-formulario></app-formulario>
+</div>
