estructura de listado noticias

--- a/src/app/components/listado-noticias/listado-noticias.component.html
+++ b/src/app/components/listado-noticias/listado-noticias.component.html
@@ -1,1 +1,11 @@
-<p>listado-noticias works!</p>
+<div>
+  <article>
+    <h1>Noticias:</h1>
+    <figure>
+      <figcaption>Título</figcaption>
+      <img src="" alt=" " />
+      <p>texto noticia</p>
+      <input type="date" />
+    </figure>
+  </article>
+</div>
