html listado noticias con funcion
cargarNoticias()

--- a/src/app/components/listado-noticias/listado-noticias.component.html
+++ b/src/app/components/listado-noticias/listado-noticias.component.html
@@ -1,11 +1,1 @@
-<div>
-  <article>
-    <h1>Noticias:</h1>
-    <figure>
-      <figcaption>Título</figcaption>
-      <img src="" alt=" " />
-      <p>texto noticia</p>
-      <input type="date" />
-    </figure>
-  </article>
-</div>
+<div class="listanoticias" [innerHTML]="cargarNoticias()"></div>
