--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+.listanoticias{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   display: block;
+   width: 400px;
+    text-align: center;
+    article{
+        border: 1px solid black;
+        margin-top: 20px;
+    }
+
+    img{
+        max-width: 100%;
+    }
+}
