retoques de css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<div class="flex">
-  <aside>
-    <app-formulario></app-formulario>
-  </aside>
-  <section>
-    <app-listado-noticias [noticiasInput]="noticias"></app-listado-noticias>
-  </section>
+<div class="wrapper">
+  <h1>NOTICIAS DE ÚLTIMA HORA</h1>
+  <div class="flex">
+    <aside>
+      <app-formulario></app-formulario>
+    </aside>
+    <section>
+      <app-listado-noticias [noticiasInput]="noticias"></app-listado-noticias>
+    </section>
+  </div>
 </div>
