--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
-.listanoticias{
+body{
+    margin: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.listanoticias{
+    
    display: block;
    width: 400px;
     text-align: center;
@@ -7,7 +11,6 @@
         border: 1px solid black;
         margin-top: 20px;
     }
-
     img{
         max-width: 100%;
     }
