--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,9 +6,9 @@
     max-width: 1440px;
 }
 .flex{
-    
-    
     display: flex;
-    justify-content: space-between;
-   
+    justify-content: space-between; 
+}
+aside,section{
+    width: 100%;
 }
