Actividad 5 revisión 1 finalizada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <h1>CREA TU NOTICIA Y MUESTRALA EN NUESTRA PÁGINA</h1>
+  <h1>CREA TU NOTICIA Y MUÉSTRALA EN NUESTRA PÁGINA</h1>
   <div class="flex">
     <aside>
       <h1>FORMULARIO PARA AGREGRAR TU NOTICIA</h1>
